<resources>
    <string name="app_name">Potato House</string>
    <string name="title_activity_login">Potato House</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="email">Email</string>
    <string name="birthdate">Birth Date</string>
    <string name="joindate">Join Date</string>

    <string name="edit">Edit</string>
    <string name="view_history">View History</string>
    <string name="view_classes">View Workouts</string>
    <string name="dont_be_potato">Don\'t Be Potato</string>

    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="start_year">01/01/2020</string>
    <string name="minimal_age_for_this_workout">Minimal age for this Workout</string>
    <string name="workout_length_in_min">Workout Length in min</string>
    <string name="maximal_workout_participants">Maximal Workout participants</string>
    <string name="about_the_workout">About the workout</string>
    <string name="added_on_date">Added on date</string>
    <string name="is_active">Is Active</string>
    <string name="workout_title">Workout Title</string>
    <string name="statistics">Statistics</string>
    <string name="training_plans">Training Plans</string>
    <string name="workouts">Workouts</string>
    <string name="my_ideas">My ideas</string>
    <string name="clients">Clients</string>
    <string name="schedule">Schedule</string>
    <string name="equipment">Equipment</string>
    <string name="today_s_schedule">today\'s schedule</string>
    <string name="enter">Enter</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="mylogo">MyLogo</string>
    <string name="clear_email">Clear Email</string>
    <string name="clear_password">Clear Password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="id">Id</string>
    <string name="health_statement">Health Statement</string>
    <string name="home_address">Home Address</string>
    <string name="not_active">Not Active</string>
    <string name="message">Message</string>
    <string name="call">call</string>
    <string name="active">Active</string>
    <string name="unactive">UnActive</string>
    <string name="todo">TODO</string>
    <string name="all_gender">All Gender</string>
    <string name="all_status">All Status</string>
    <string name="since">since</string>
    <string name="from">from</string>
    <string name="more">MORE</string>
    <string name="name">name</string>
    <string name="address">address</string>
    <string name="has_health">has health</string>
    <string name="no_health">No health</string>
    <string name="time">TIME</string>
    <string name="names">names</string>
    <string name="room">ROOM</string>
    <string name="title">TITLE</string>
    <string name="_0_registered">0 registered</string>
    <string name="date">date</string>
    <string name="start_hour">start hour</string>
    <string name="adding_workout_to_schedule">Adding workout to schedule</string>
    <string name="finish_hour">finish hour</string>
    <string name="choose_the_workout">1. Choose the workout</string>
    <string name="insert_starting_hour_and_click_enter">2. Insert starting hour and click \'Enter\'</string>
    <string name="add_workout_to_this_date">Add workout to this date</string>
    <string name="no_workouts">No workouts!</string>
    <string name="add">Add</string>
    <string name="potato_house">POTATO HOUSE</string>
    <string name="password">Password</string>
    <string name="today_s_bithdays">Today\'s Birthdays</string>
    <string name="active_weman">Active Woman</string>
    <string name="active_men">Active Men</string>
    <string name="unactive_all">UnActive All</string>
    <string name="active_all">Active All</string>
    <string name="all_clients">All Clients</string>
    <string name="create_new_client">Create new client</string>
    <string name="add_workout_to_selected_date">add workout to selected date</string>
    <string name="schedualed_workoutss">Scheduled workouts</string>
    <string name="all_workouts">All Workouts</string>
    <string name="create_new_workout">Create new Workout</string>
    <string name="un_active">Un Active</string>
    <string name="no_data_to_show">NO DATA TO SHOW!</string>
    <string name="no_birthdays_today">NO BIRTHDAYS TODAY!</string>
    <string name="send_to_all">SEND TO ALL</string>
    <string name="attendance">attendance</string>
    <string name="history">HISTORY</string>
    <string name="the_workout_is_about_to_begin">THE WORKOUT IS ABOUT TO BEGIN!</string>
    <string name="adding_trainer_to_workout">Adding trainer to workout</string>
    <string name="active_w">Active W</string>
    <string name="active_m">Active M</string>
    <string name="selectd_date">Selectd date</string>
    <string name="all">All</string>
    <string name="detailed">Detailed</string>
</resources>