<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/me"
    android:orientation="vertical"
    android:padding="20dp"
    android:visibility="visible"
    tools:context=".Activities.OptionsActivity"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:contentDescription="@string/dont_be_potato"
        app:srcCompat="@drawable/logo3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnHistory"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/btn_green_logo"
                android:fontFamily="sans-serif-light"
                android:text="@string/history"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/btn_turkiz"
                android:fontFamily="sans-serif-light"
                android:text="@string/schedule"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnAttendance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/btn_blue"
                android:fontFamily="sans-serif-light"
                android:text="@string/attendance"
                android:textAllCaps="true"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnBirthday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/btn_green"
                android:fontFamily="sans-serif-light"
                android:foreground="@drawable/ic_baseline_cake_24"
                android:foregroundGravity="center"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnClients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/btn_yellow"
                android:fontFamily="sans-serif-light"
                android:textAllCaps="true"
                android:text="@string/clients"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnWorkouts"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/btn_red"
            android:fontFamily="sans-serif-light"
            android:text="@string/workouts"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnEquipment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/btn_orange"
            android:fontFamily="sans-serif-light"
            android:text="@string/equipment"
            android:textAllCaps="true"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnIdeas"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/btn_pink"
            android:fontFamily="sans-serif-light"
            android:text="@string/my_ideas"
            android:textAllCaps="true"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnStatistics"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="5"
            android:background="@drawable/btn_purple"
            android:fontFamily="sans-serif-light"
            android:text="@string/statistics"
            android:textAllCaps="true"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>