<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:theme="@style/AppTheme"
    tools:context=".Fragments.ScheduleFragmentyyyyy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/choose_the_workout"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/fsaw_workouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:spinnerMode="dialog" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/insert_starting_hour_and_click_enter"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fsaw_time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/start_hour"
                android:importantForAutofill="no"
                android:inputType="time" />

            <EditText
                android:id="@+id/fsaw_time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/finish_hour"
                android:importantForAutofill="no"
                android:inputType="time" />
        </TableRow>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="?android:attr/listDivider" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fsaw_btn_add_workout"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_workout_to_this_date"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                android:typeface="sans"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fsaw_btn_cancel"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                android:typeface="sans"
                android:visibility="visible" />
        </TableRow>

    </LinearLayout>
</ScrollView>