<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/si_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:orientation="vertical"
    android:padding="5dp"
    android:visibility="visible">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/si_label_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="bottom"
            android:text="@string/time"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/si_label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/title"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/si_label_signed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom|right"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:visibility="visible" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/si_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/si_label_registered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0_registered"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:visibility="gone" />

    </TableRow>

</LinearLayout>